Invariant failure: s->commit_transaction(s, NULL) resulted in status BadValue 22

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.2, 3.1.1
    • Affects Version/s: 3.1.0
    • Component/s: Storage, WiredTiger
    • None
    • Fully Compatible
    • ALL
    • Quint Iteration 3.1.1
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      One of the MCI parallel suites failed with the invariant violation below (the call stack has been demangled). The full logs are attached.

      2015-03-12T00:00:30.596+0000 I COMMAND  [conn82] dropDatabase jstests_dropdb starting
      2015-03-12T00:00:30.598+0000 I COMMAND  [conn82] dropDatabase jstests_dropdb finished
      2015-03-12T00:00:30.674+0000 E STORAGE  [conn82] WiredTiger (0) [1426118430:674072][29115:0x2ba4b76cc940], session.commit_transaction: failed transaction requires rollback
      2015-03-12T00:00:30.674+0000 I -        [conn82] Invariant failure: s->commit_transaction(s, NULL) resulted in status BadValue 22: Invalid argument at src/mongo/db/storage/wiredtiger/wiredtiger_recovery_unit.cpp 306
      2015-03-12T00:00:30.680+0000 I CONTROL  [conn82] 
       0xef4db9 0xea3721 0xe8823a 0xd256b5 0x93a43f 0x9a29e4 0x9a38f2 0x9a45de 0xb63aa0 0xa7d573 0x7eb15f 0xeb772b 0x2ba4ae44b83d 0x2ba4ae736fcd
      ----- BEGIN BACKTRACE -----
      mongod(mongo::printStackTrace(std::ostream&) 0x29) [0xef4db9]
       mongod(mongo::logContext(char const*) 0xE1) [0xea3721]
       mongod(mongo::invariantOKFailed(char const*, mongo::Status const&, char const*, unsigned int) 0xDA) [0xe8823a]
       mongod(mongo::WiredTigerRecoveryUnit::_txnClose(bool) 0x335) [0xd256b5]
       mongod(mongo::CmdListDatabases::run(mongo::OperationContext*, std::string const&, mongo::BSONObj&, int, std::string&, mongo::BSONObjBuilder&, bool) 0x8CF) [0x93a43f]
       mongod(mongo::_execCommand(mongo::OperationContext*, mongo::Command*, std::string const&, mongo::BSONObj&, int, std::string&, mongo::BSONObjBuilder&, bool) 0x34) [0x9a29e4]
       mongod(mongo::Command::execCommand(mongo::OperationContext*, mongo::Command*, int, char const*, mongo::BSONObj&, mongo::BSONObjBuilder&, bool) 0xBC2) [0x9a38f2]
       mongod(mongo::_runCommands(mongo::OperationContext*, char const*, mongo::BSONObj&, mongo::_BufBuilder<mongo::TrivialAllocator>&, mongo::BSONObjBuilder&, bool, int) 0x27E) [0x9a45de]
       mongod(mongo::runQuery(mongo::OperationContext*, mongo::Message&, mongo::QueryMessage&, mongo::NamespaceString const&, mongo::CurOp&, mongo::Message&) 0x1450) [0xb63aa0]
       mongod(mongo::assembleResponse(mongo::OperationContext*, mongo::Message&, mongo::DbResponse&, mongo::HostAndPort const&) 0xAF3) [0xa7d573]
       mongod(mongo::MyMessageHandler::process(mongo::Message&, mongo::AbstractMessagingPort*, mongo::LastError*) 0xDF) [0x7eb15f]
       mongod(mongo::PortMessageServer::handleIncomingMsg(void*) 0x34B) [0xeb772b]
       libpthread.so.0( 0x683D) [0x2ba4ae44b83d]
       libc.so.6(clone 0x6D) [0x2ba4ae736fcd]
      -----  END BACKTRACE  -----
      2015-03-12T00:00:30.680+0000 I -        [conn82] 
      ***aborting after invariant() failure
      

        1. full_log.txt
          761 kB
          Kaloian Manassiev

            Assignee:
            Geert Bosch
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: