SERVER-17562: Rollback transaction in WT commitAndRestart